# Pok-mon-game-in-C-

./: CMakeLists.txt  README.md
data/: held_items.txt  moves.txt  pokemon.txt
include/: game.hpp  held_item.hpp  move.hpp  player.hpp  pokemon.hpp  solve.hpp
src/: game.cpp  held_item.cpp  main.cpp  move.cpp  player.cpp  pokemon.cpp  solve.cpp
